# Jay-Patravali-F110-2020

./: README.md
lidar_ws/patravali_dynmodel/: patravali_dynmodel.cpp
lidar_ws/patravali_gap_finding/: CMakeLists.txt  package.xml
lidar_ws/patravali_gap_finding/launch/: gap_finding_sim.launch
lidar_ws/patravali_gap_finding/msg/: gaps.msg
lidar_ws/patravali_gap_finding/scripts/: find_gap.py  visualize_gap_finding.py
patravali_ws/src/: readme.md
patravali_ws/src/beginner_tutorials/: CMakeLists.txt  CMakeLists.txt.bkp  package.xml
patravali_ws/src/beginner_tutorials/bagfiles/: 2020-04-09-15-29-13.bag  patravali_velonly.bag  subset.bag
patravali_ws/src/beginner_tutorials/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
patravali_ws/src/patravali_runtime_monitoring/: CMakeLists.txt  package.xml
patravali_ws/src/patravali_runtime_monitoring/src/: patravali_average.cpp  patravali_average_vesc.cpp
pid_ws/src/: readme.md  readme.txt
pid_ws/src/algorithms/patravali_wall_following/: CMakeLists.txt
pid_ws/src/algorithms/patravali_wall_following/scripts/: control.py  patravali_analysis.py
pid_ws/src/algorithms/wall_following/: package.xml
pid_ws/src/algorithms/wall_following/config/: params.yaml
pid_ws/src/algorithms/wall_following/launch/: wall_following_sim.launch
pid_ws/src/algorithms/wall_following/scripts/: control.py  pid_error.py
pid_ws/src/patravali_wall_following/: package.xml
pid_ws/src/patravali_wall_following/config/: params.yaml
pid_ws/src/patravali_wall_following/launch/: wall_following_sim.launch
pid_ws/src/patravali_wall_following/msg/: error_analysis.msg
pid_ws/src/patravali_wall_following/scripts/: patravalI_analysis.py  pid_error.py
slamlab_ws/devel/: .catkin  local_setup.sh
slamlab_ws/devel/lib/pkgconfig/: particle_filter.pc
slamlab_ws/devel/share/particle_filter/cmake/: particle_filterConfig.cmake
slamlab_ws/src/: README.md
slamlab_ws/src/particle_filter/launch/: custom.launch  map_server.launch
slamlab_ws/src/waypoint_saver/: CMakeLists.txt  README.md  package.xml  waypoints.csv
slamlab_ws/src/waypoint_saver/scripts/: waypoint_saver.py
