<?xml version="1.0"?>
<package format="2">
  <name>patravali_runtime_monitoring</name>
  <version>0.0.0</version>
  <description>The patravali_runtime_monitoring package</description>

  <maintainer email="patravaj@oregonstate.edu">Jay Patravali</maintainer>
  <license>BSD</license>
  <author email="patravaj@oregonstate.edu">Jay Patravali</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>vesc_msgs</build_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>vesc_msgs</exec_depend>

</package>
